export enum RenderMethod {
  DEFAULT = 'default',
  ERROR = 'error',
}
